Refactor DrawService for improved readability and structure